--- a/index.html
+++ b/index.html
@@ -16,9 +16,10 @@
         The most effective, cutting-edge learning techniques that you can apply to your daily life. <a href="#" class="header__link">Learn more →</a>
       </p>
       <img
-          src="./images/header-image.png"
-          alt="Epic ponderer stook on a mountaintop deliberating over the finer points of the modern educational system, while also wondering where that giant blue square came from"
-        >
+        class="header__main-illustration"
+        src="./images/header-image.png"
+        alt="Epic ponderer stook on a mountaintop deliberating over the finer points of the modern educational system, while also wondering where that giant blue square came from"
+      >
       <div class="header__square"></div>
     </header>
     <main class="content">
