--- a/index.html
+++ b/index.html
@@ -39,6 +39,65 @@
           </div>
         </article>
       </section>
+      <section class="techniques">
+        <h2 class="section-title">Learning Techniques</h2>
+        <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
+        <ul class="cards">
+          <li class="card__item">
+            <img class="card__image" src="./images/cards-attention.png" alt="101 Essays that will Change the way You Think a book by Brianna Wiest">
+            <h3 class="card__title">Two Ways of Thinking</h3>
+            <p class="card__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
+          </li>
+          <li class="card__item">
+            <img class="card__image" src="./images/cards-recall.png" alt="Marble statue of a boy">
+            <h3 class="card__title">Recall</h3>
+            <p class="card__description">Improving you ability to remember key bits of information helps to connect different parts of the brain.</p>
+          </li>
+          <li class="card__item">
+            <img class="card__image" src="./images/cards-interleaving.png" alt="Black and white image of the National September 11 Memorial & Museum">
+            <h3 class="card__title">Interleaving</h3>
+            <p class="card__description">When you learn multiple skills at the same time, they reinfrce each other.</p>
+          </li>
+          <li class="card__item">
+            <img class="card__image" src="./images/cards-question.png" alt="A man in a white room with multiple doors and windows presumably questioning which exit to take">
+            <h3 class="card__title">Questions</h3>
+            <p class="card__description">When listening to your teacher, think up a good question, something that you're really itching to know.</p>
+          </li>
+          <li class="card__item">
+            <img class="card__image" src="./images/cards-competence.png" alt="A hand holding up a stack of books">
+            <h3 class="card__title">Illusion of Competence</h3>
+            <p class="card__description">Test yourself, write it down, tell other people, and repeat the process in different setting. Only then can you be truly certain you've understood something.</p>
+          </li>
+        </ul>
+      </section>
+      <section class="video">
+        <h2 class="section-title">TED talks</h2>
+        <p class="section-subtitle">For lovers of procrastination</p>
+        <div class="video__iframes">
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/5MgBikgcWnY" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <iframe class="video__iframe" src="https://www.youtube.com/embed/arj7oStGLkU" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+      </section>
+      <section class="oakley">
+        <article class="two-columns">
+          <h2 class="two-columns__brief">Barbara Oakley's story.</h2>
+          <div class="two-columns__main-text">
+            <p class="two-columns__paragraph">
+              Math didn't come naturally to Barbara in childhood. She thought of herself as more of a humanities person, and not a brillian one at that. With an eye to becoming a linguist, after school she enlisted in the army, who sent her to learn Russian. After several years of service, during which she rose to the rank of Captain, Barbara left the army and decided to study engineering. It was during this time that she developed her learning methodology as she was forced to reprogram her brain for a different kind of learning. It turns out that when something doesn't come naturally to you, having to work hard to gain the knowledge that other peope may get at first glance gives you a deeper, more comprehensive understanding of the subject matter.
+            </p>
+          </div>
+        </article>
+      </section>
+      <section class="feynman">
+        <img
+          src="./images/feynman.png"
+          alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
+          class="feynman__image"
+        >
+        <h2 class="feynman__title">The Feynman Technique</h2>
+        <p class="feynman__subtitle">Learn without forgetting</p>
+        <a href="#" class="feynman__link">More →</a>
+      </section>
       <section class="digits">
         <h2 class="section-title">Facts and figures</h2>
         <p class="section-subtitle">On learning and the brain</p>
@@ -79,15 +138,20 @@
           </li>
         </ul>
       </section>
-      <section class="feynman">
-        <img
-          src="./images/feynman.png"
-          alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
-          class="feynman__image"
-        >
-        <h2 class="feynman__title">The Feynman Technique</h2>
-        <p class="feynman__subtitle">Learn without forgetting</p>
-        <a href="#" class="feynman__link">More →</a>
+      <section class="khan">
+        <div class="khan__container">
+          <p class="khan__author">Salman Khan</p>
+          <h2 class="khan__title">The One World Schoolhouse</h2>
+          <p class="Khan__quote">
+            Sal Khan's passion and innovation is transforming learning for millions of students worldwide. The One World Schoolhouse is a must-read for all who are committed to improving education so students everywhere can gain the skills and knowledge to be successful in school, careers and life.
+          </p>
+          <p class="khan__quote-author">George LucasFilmmaker</p>
+          <p class="khan__quote-author-subline"></p>
+          <div class="khan__book-containter">
+            <img class="khan__book-pic" src="./images/khan-book-2.png" alt="Book cover of The One World Schoolhouse by Salman Khan">
+            <a class="khan__buy-link">Buy book →</a>
+          </div>
+        </div>
       </section>
       <section class="kaufman">
         <h2 class="section-title section-title_theme_dark">Ten principles of rapid skill acquisition</h2>
