--- a/index.html
+++ b/index.html
@@ -142,14 +142,14 @@
         <div class="khan__container">
           <p class="khan__author">Salman Khan</p>
           <h2 class="khan__title">The One World Schoolhouse</h2>
-          <p class="Khan__quote">
+          <p class="khan__quote">
             Sal Khan's passion and innovation is transforming learning for millions of students worldwide. The One World Schoolhouse is a must-read for all who are committed to improving education so students everywhere can gain the skills and knowledge to be successful in school, careers and life.
           </p>
-          <p class="khan__quote-author">George LucasFilmmaker</p>
-          <p class="khan__quote-author-subline"></p>
-          <div class="khan__book-containter">
+          <p class="khan__quote-author">George Lucas</p>
+          <p class="khan__quote-author-subline">Filmmaker</p>
+          <div class="khan__book-container">
             <img class="khan__book-pic" src="./images/khan-book-2.png" alt="Book cover of The One World Schoolhouse by Salman Khan">
-            <a class="khan__buy-link">Buy book →</a>
+            <a href="#" class="khan__buy-link">Buy book →</a>
           </div>
         </div>
       </section>
@@ -203,6 +203,24 @@
           alt="A big blue triangle, over which Josh Kaufman claims ownership"
           src="./images/kaufman-triangle.svg"
         >
+      </section>
+      <section class="resources">
+        <h2 class="section-title">Useful resources</h2>
+        <p class="section-subtitle">Further materials on learning techniques and hacks.</p>
+        <nav class="resources__logo-zone">
+          <a href="#">
+            <img class="resources__logo" src="./images/logo/resources-tedED.png" alt="TEDEd logo">
+          </a>
+          <a href="#">
+            <img class="resources__logo" src="./images/logo/resources-Medium.png" alt="Medium logo">
+          </a>
+          <a href="#">
+            <img class="resources__logo" src="./images/logo/resources-dezeen.png" alt="dezeen logo">
+          </a>
+          <a href="#">
+            <img class="resources__logo" src="./images/logo/resources-goodreads.png" alt="goodreads logo">
+          </a>
+        </nav>
       </section>
     </main>
     <footer class="footer">
