--- a/index.html
+++ b/index.html
@@ -42,30 +42,30 @@
         <h2 class="section-title">Learning Techniques</h2>
         <p class="section-subtitle">Five Strategies from Barbara Oakley</p>
         <ul class="cards">
-          <li class="card__item">
-            <img class="card__image" src="./images/cards-attention.png" alt="101 Essays that will Change the way You Think a book by Brianna Wiest">
-            <h3 class="card__title">Two Ways of Thinking</h3>
-            <p class="card__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-attention.png" alt="101 Essays that will Change the way You Think a book by Brianna Wiest">
+            <h3 class="cards__title">Two Ways of Thinking</h3>
+            <p class="cards__description">Deep understanding comes from being able to toggle back and forth between focused and diffused thinking.</p>
           </li>
-          <li class="card__item">
-            <img class="card__image" src="./images/cards-recall.png" alt="Marble statue of a boy">
-            <h3 class="card__title">Recall</h3>
-            <p class="card__description">Improving you ability to remember key bits of information helps to connect different parts of the brain.</p>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-recall.png" alt="Marble statue of a boy">
+            <h3 class="cards__title">Recall</h3>
+            <p class="cards__description">Improving you ability to remember key bits of information helps to connect different parts of the brain.</p>
           </li>
-          <li class="card__item">
-            <img class="card__image" src="./images/cards-interleaving.png" alt="Black and white image of the National September 11 Memorial & Museum">
-            <h3 class="card__title">Interleaving</h3>
-            <p class="card__description">When you learn multiple skills at the same time, they reinfrce each other.</p>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-interleaving.png" alt="Black and white image of the National September 11 Memorial & Museum">
+            <h3 class="cards__title">Interleaving</h3>
+            <p class="cards__description">When you learn multiple skills at the same time, they reinfrce each other.</p>
           </li>
-          <li class="card__item">
-            <img class="card__image" src="./images/cards-question.png" alt="A man in a white room with multiple doors and windows presumably questioning which exit to take">
-            <h3 class="card__title">Questions</h3>
-            <p class="card__description">When listening to your teacher, think up a good question, something that you're really itching to know.</p>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-question.png" alt="A man in a white room with multiple doors and windows presumably questioning which exit to take">
+            <h3 class="cards__title">Questions</h3>
+            <p class="cards__description">When listening to your teacher, think up a good question, something that you're really itching to know.</p>
           </li>
-          <li class="card__item">
-            <img class="card__image" src="./images/cards-competence.png" alt="A hand holding up a stack of books">
-            <h3 class="card__title">Illusion of Competence</h3>
-            <p class="card__description">Test yourself, write it down, tell other people, and repeat the process in different setting. Only then can you be truly certain you've understood something.</p>
+          <li class="cards__item">
+            <img class="cards__image" src="./images/cards-competence.png" alt="A hand holding up a stack of books">
+            <h3 class="cards__title">Illusion of Competence</h3>
+            <p class="cards__description">Test yourself, write it down, tell other people, and repeat the process in different setting. Only then can you be truly certain you've understood something.</p>
           </li>
         </ul>
       </section>
@@ -225,7 +225,7 @@
     <footer class="footer">
       <div class="footer__columns">
         <div class="footer__column footer__column_content_copyright">
-          <div class="logo_place_footer"></div>
+          <div class="logo logo_place_footer"></div>
           <p class="footer__author">&copy; 2021 Lillian Dennen</p>
         </div>
         <nav class="footer__column footer__column_content_about">
