--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
       <img
         class="header__main-illustration"
         src="./images/header-image.png"
-        alt="Epic ponderer stook on a mountaintop deliberating over the finer points of the modern educational system, while also wondering where that giant blue square came from"
+        alt="A person on a mountaintop staring off into the distance"
       >
-      <div class="header__square"></div>
+      <div class="header__square rotation"></div>
     </header>
     <main class="content">
       <section class="description">
@@ -90,7 +90,7 @@
       <section class="feynman">
         <img
           src="./images/feynman.png"
-          alt="A picture of Richard Feynman, a world-renowned quantum physicist. The Feynman Technique is derived from his studying methods when he was a student at Princeton."
+          alt="A picture of Richard Feynman"
           class="feynman__image"
         >
         <h2 class="feynman__title">The Feynman Technique</h2>
@@ -198,8 +198,8 @@
           </li>
         </ul>
         <img
-          class="kaufman__triangle"
-          alt="A big blue triangle, over which Josh Kaufman claims ownership"
+          class="kaufman__triangle rotation"
+          alt="Blue triangle"
           src="./images/kaufman-triangle.svg"
         >
       </section>
